changes blog title and chapter 1 title

--- a/book.toml
+++ b/book.toml
@@ -3,4 +3,4 @@ authors = ["sreiswig"]
 language = "en"
 multilingual = false
 src = "src"
-title = "Shouting Into The Void"
+title = "Sam Reiswig's blog"
