restructuring the blog

--- a/book.toml
+++ b/book.toml
@@ -3,7 +3,7 @@ authors = ["sreiswig"]
 language = "en"
 multilingual = false
 src = "src"
-title = "Sam Reiswig's blog"
+title = "Sam Reiswig"
 
 [output.html]
 mathjax-support = true
